# Mesh_Generation_Library_CPP

./: CMakeLists.txt  Readme.md
include/: constants.h  debughelpers.hpp  export.hpp  interpolation.hpp  mcalgorithm.hpp  scalarfields.hpp  simplices.hpp
src/: main.cpp  marchingcubes  marchingcubes.cpp  scalarfields.hpp
test/: MCsphere.txt  mesh.ply  viz.py  vizply.py
